Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <td><strong>Vinsoo Agent</strong></td>
                             <td>Qwen3-max</td>
                             <td><strong>88.0%</strong></td>
-                            <td data-en="Partial" data-zh="❌">Partial</td>
+                            <td data-en="❌" data-zh="❌">❌</td>
                         </tr>
                         <tr>
                             <td>2</td>
@@ -722,3 +722,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
