Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <p class="hero-subtitle" data-en="Cloud-Based Secure AI Agent for Software Development" data-zh="云端安全 AI Agent，驱动软件开发">
                     Cloud-Based Secure AI Agent for Software Development
                 </p>
-                <p class="hero-tagline" data-en="The first to achieve world #1 on SWE-bench Lite using a cost-effective model. This 88.66% result reduces the cost of solving complex engineering tasks by ~10×, making advanced AI coding accessible to developers and organizations worldwide — with further optimizations ahead through better agent strategies." 
-                   data-zh="我们是首个使用高性价比模型在 SWE-bench Lite 上取得世界第一的团队。88.66% 的成绩将复杂工程任务的解决成本显著降低约 10 倍，让先进的 AI 编程技术惠及全球更多开发者与企业 —— 未来可通过更强的 Agent 策略继续进一步降本。">
-                    The first to achieve world #1 on SWE-bench Lite using a cost-effective model. This 88.66% result reduces complex engineering costs by ~10×, making advanced AI coding accessible worldwide — with further optimizations ahead.
+                <p class="hero-tagline" data-en="The first to achieve SOTA on SWE-bench Lite using a cost-effective model. This 88.66% result reduces the cost of solving complex engineering tasks by ~10×, making advanced AI coding accessible to developers and organizations worldwide. We are confident that our proprietary agent strategies can further reduce costs by 1000× in the future." 
+                   data-zh="我们是首个使用高性价比模型在 SWE-bench Lite 上取得 SOTA 的团队。88.66% 的成绩将复杂工程任务的解决成本显著降低约 10 倍，让先进的 AI 编程技术惠及全球更多开发者与企业。未来我们有信心通过自研 Agent 策略将成本继续优化上千倍。">
+                    The first to achieve SOTA on SWE-bench Lite using a cost-effective model. This 88.66% result reduces complex engineering costs by ~10×, making advanced AI coding accessible worldwide. We are confident our agent strategies can further reduce costs by 1000×.
                 </p>
                 <div class="score-card">
                     <div class="score-item highlight-score">
@@ -100,9 +100,9 @@
         <section id="abstract" class="section card">
             <h2 data-en="Abstract" data-zh="摘要">Abstract</h2>
             <div class="content">
-                <p data-en="Vinsoo is an AI coding agent launched by AIYouthLab, featuring an automated project development process from requirement confirmation to delivery and acceptance. Using the cost-effective Qwen3-max model, Vinsoo has achieved state-of-the-art performance on SWE-bench Lite with an 88.66% success rate (266/300 tasks), surpassing popular AI coding products such as Cursor, Codex, and Claude Code."
-                   data-zh="Vinsoo 是芸思智能（AIYouthLab）推出的 AI 编程智能体，主打从需求确认到交付验收，AI 全流程自动推进项目开发。使用高性价比的 Qwen3-max 模型，Vinsoo 在 SWE-bench Lite 上取得了 88.66% 的 SOTA 成绩（解决 266/300 个任务），超越了 Cursor、Codex、Claude Code 等流行 AI 编程产品。">
-                   Vinsoo is an AI coding agent launched by AIYouthLab, featuring an automated project development process. Using the cost-effective Qwen3-max model, Vinsoo achieved 88.66% on SWE-bench Lite (266/300 tasks).
+                <p data-en="Vinsoo is an AI coding agent launched by AIYouthLab, featuring an automated project development process from requirement confirmation to delivery and acceptance. Using the cost-effective Qwen3-max model, Vinsoo has achieved state-of-the-art performance on SWE-bench Lite with an 88.66% success rate (266/300 tasks)."
+                   data-zh="Vinsoo 是芸思智能（AIYouthLab）推出的 AI 编程智能体，主打从需求确认到交付验收，AI 全流程自动推进项目开发。使用高性价比的 Qwen3-max 模型，Vinsoo 在 SWE-bench Lite 上取得了 88.66% 的 SOTA 成绩（解决 266/300 个任务）。">
+                   Vinsoo is an AI coding agent launched by AIYouthLab. Using the cost-effective Qwen3-max model, Vinsoo achieved 88.66% on SWE-bench Lite (266/300 tasks).
                 </p>
                 <p class="highlight-text" data-en="What sets Vinsoo apart is that it independently drives the entire development process — from understanding requirements, to writing code, to testing and debugging — without human intervention at each step. Vinsoo's new version is now in invite-only release and will soon be available to everyone. Dramatically boosting productivity across society — enabling AI to autonomously generate income for people."
                    data-zh="Vinsoo 的独特之处在于：它能独立驱动整个开发流程 —— 从理解需求、编写代码到测试调试 —— 无需人工干预每个步骤。Vinsoo 全新版本邀请码正在发放中，即将全面公开上线，人人都可轻松使用。大幅提升人类社会的工作效率 —— 让 AI 全自动为人类创造收入。">
