Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                    data-zh="AIYouthLab 是一家专注于云端安全 AI Agent 的创业团队。核心成员由 00 后研究者与工程师主导，来自华盛顿大学、卡内基梅隆大学、清华大学、北京大学等顶尖学府，并拥有亚马逊、京东、腾讯、字节跳动等公司的工程经验。">
                    AIYouthLab is a young startup team building cloud-based, secure AI agents for software development.
                 </p>
-                <p data-en="Founder & CEO: Xiaoyue Yin."
-                   data-zh="创始人兼 CEO：殷晓玥。">
-                   Founder &amp; CEO: Xiaoyue Yin.
+                <p data-en="Founder & CEO: Xiaoyue Yin (LinkedIn)."
+                   data-zh="创始人兼 CEO：殷晓玥（LinkedIn）。">
+                   Founder &amp; CEO: <a href="https://cn.linkedin.com/in/xiaoyue-yin-602676183" target="_blank" rel="noopener noreferrer">Xiaoyue Yin (LinkedIn)</a>.
                 </p>
                 <p data-en="Our mission is to make software creation accessible to everyone by dramatically lowering the cost and friction of building real products. In the long run, we hope AI can amplify human productivity and contribute to broad-based, inclusive prosperity."
                    data-zh="我们的使命是让软件创造人人可及：通过大幅降低构建真实产品的成本与门槛，让个人与小团队也能拥有“超级工程能力”。长期来看，我们希望 AI 能放大人类生产力，为更广泛的社会共同富裕与普惠发展贡献力量。">
