--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/infra.css">
     <link rel="stylesheet" href="css/tools.css">
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo-web.png">
 </head>
 <body>
     <div class="background-grid"></div>
@@ -19,7 +19,7 @@
 
     <nav class="navbar">
         <div class="logo-container">
-            <img src="assets/logo.png" alt="Vinsoo Logo" class="logo">
+            <img src="assets/logo-web.png" alt="Vinsoo Logo" class="logo">
             <span class="logo-text">Vinsoo Agent</span>
         </div>
         <div class="nav-controls">
